Fixed pre content wrapping

--- a/src/app/clip-dashboard/clip-display/clip-display.component.sass
+++ b/src/app/clip-dashboard/clip-display/clip-display.component.sass
@@ -1,4 +1,7 @@
 
+.main-content
+  width: 100%
+
 .custom-mat-list-item
   height: auto
   border-style: ridge
